--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,22 +33,11 @@ header {
 main {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
-    width: 70%;
+    width: 90%;
     gap: 4rem;
-
-    & section {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 4rem;
-
-        width: 45%;
-        height: 100%;
-    }
 
     & .placeholder-1 {
         width: 100%;
@@ -56,11 +45,9 @@ main {
     }
     & .placeholder-2 {
         width: 100%;
-        height: auto;
     }
     & .placeholder-3 {
         width: 100%;
-        height: auto;
     }
 }
 
@@ -73,4 +60,45 @@ footer {
     width: 100%;
     height: 50px;
     margin-top: auto;
+}
+
+@media (min-width: 600px)  {
+    main {
+        width: 80%;
+    }
+}
+
+@media (min-width: 700px)  {
+    main {
+        width: 70%;
+    }
+}
+
+@media (min-width: 800px)  {
+    main {
+        width: 60%;
+    }
+}
+
+@media (min-width: 900px)  {
+    main {
+        width: 50%;
+    }
+}
+
+@media (min-width: 1150px)  {
+    main {
+        width: 80%;
+        justify-content: space-between;
+
+        & .placeholder-1 {
+            width: 40%;
+        }
+        & .placeholder-2 {
+            width: 50%;
+        }
+        & .placeholder-3 {
+            width: 40%;
+        }
+    }
 }
