--- a/src/components/calendar/calendar.component.scss
+++ b/src/components/calendar/calendar.component.scss
@@ -3,12 +3,11 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-
+    overflow: hidden;
     width: 100%;
     height: 100%;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 8px;
-    overflow: scroll;
     background-color: var(--midground-color);
 }
 
@@ -36,6 +35,8 @@
 
     width: 100%;
     height: auto;
+
+    overflow: scroll;
 
     & .weekday-container {
         display: flex;
